# scd24-visao-computacional

./: .gitignore  Dockerfile  README.md  ingest-coco.py  notebook.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yaml
core/: dataset.py  metrics.py  utils.py
core/models/: classification.py  detection.py  segmentation.py
notebooks/: detection.ipynb  segmentation.ipynb
tests/: conftest.py  test_classification.py  test_detection.py  test_metrics.py  test_segmentation.py
